sqlkube.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysqlss
spec:
  serviceName: "mysql-svc"
  replicas: 1
  template:
    metadata:
      name: mysqlpod
      labels:
        app: mysqlss
    spec:
      containers:
      - name: mysqlhost
        image: mysql:5.6
        imagePullPolicy: "Always"
        ports:
        - containerPort: 3306
  selector:
    matchLabels:
       app: mysqlss
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  clusterIP: None
  ports: 
   - port: 3306
     targetPort: 3306
  selector:
    app: mysqlss
