sv_con_nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: svcappcon
  namespace: con
spec:
#  type: NodePort
  clusterIP: None
  ports: 
   - port: 80
     targetPort: 80
  selector:
    app: myapp
    type: frontend
