sv_prod_nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: svcappprod
  namespace: prod
spec:
  type: NodePort
#  clusterIP: None
  ports: 
   - port: 80
     targetPort: 80
  selector:
    app: myapp
    type: frontend
