sv_test_nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: svcapptest
  namespace: test
spec:
  clusterIP: None
  ports: 
   - port: 80
     targetPort: 80
  selector:
    app: myapp
    type: frontend
