StatefulDeployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mydockerkubeappdeployement
  labels: 
    app: myapp
    type: frontend
spec:
  serviceName: "pythonsvcsts"
  template:
    metadata:
      name: mydockerkubeappPod
      labels:
        app: myapp
        type: frontend
    spec:
      containers:
       - name: mydockerapp
         image: docker.io/navrajs92/kubepython:1
         imagePullPolicy: "Always"
         ports: 
          - containerPort: 5000
      imagePullSecrets:
        - name: dockercred
  selector:
    matchLabels:
       app: myapp
       type: frontend
  replicas: 1
       
---
apiVersion: v1
kind: Service
metadata:
  name: pythonsvcsts
spec:
  clusterIP: None
  ports: 
   - port: 80
     targetPort: 5000
  selector:
    app: myapp
    type: frontend
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pysts
  namespace: default
spec:
  rules:
  - host: learnkubernetes.xyz
    http:
      paths:
      - backend:
          serviceName: pythonsvcsts
          servicePort: 80
        path: /
  tls:
  - hosts:
    - learnkubernetes.xyz
    secretName: stsdepkubepython
