devapp3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devappthree
  namespace: prod
  labels: 
    app: myapp
    type: frontend
spec:
  template:
    metadata:
      name: podappthree
      labels:
        app: myapp
        type: frontend
    spec:
      containers:
       - name: nginx
         image: nginx
         imagePullPolicy: "Always"
         ports: 
          - containerPort: 80
#      imagePullSecrets:
#        - name: dockercred
  selector:
    matchLabels:
       app: myapp
       type: frontend
  replicas: 1      
---
apiVersion: v1
kind: Service
metadata:
  name: svcappthree
  namespace: prod
spec:
  clusterIP: None
  ports: 
   - port: 80
     targetPort: 80
  selector:
    app: myapp
    type: frontend	
---
kind: Service
apiVersion: v1
metadata:
  name: svcapp3-1
  namespace: prod
spec:
  type: ExternalName
  externalName: svcappone.test.svc.cluster.local
  ports:
  - port: 80
---
kind: Service
apiVersion: v1
metadata:
  name: svcapp3-2
  namespace: prod
spec:
  type: ExternalName
  externalName: svcapptwo.con.svc.cluster.local
  ports:
  - port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingappthree
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: learnkubernetes.xyz
    http:
      paths:
      - backend:
          serviceName: svcappthree
          servicePort: 80
        path: /app3
  tls:
  - hosts:
    - learnkubernetes.xyz
    secretName: stsdepkubepython
