network_policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: access-policy.test
  namespace: test
spec: 
  podSelector:
    matchLabels:
       app: myapp
       type: frontend
  policyTypes:
   - Ingress
  ingress:
   - from:
      - namespaceSelector:
          matchLabels:
            deploy: nsappthree.prod
     ports: 
      - protocol: TCP
        port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: access-policy.con
  namespace: con
spec: 
  podSelector:
    matchLabels:
       type: frontend
       app: myapp
  policyTypes:
   - Ingress
  ingress:
   - from:
      - namespaceSelector:
          matchLabels:
            deploy: nsappthree.prod
     ports: 
      - protocol: TCP
        port: 80
